@@ -93,6 +93,9 @@ public class TestCheckIndex extends LuceneTestCase {
     assertEquals(18, seg.termVectorStatus.docCount);
     assertEquals(18, seg.termVectorStatus.totVectors);
 
+    assertNotNull(seg.diagnostics.get("java.vm.version"));
+    assertNotNull(seg.diagnostics.get("java.runtime.version"));
+
     assertTrue(seg.diagnostics.size() > 0);
     final List<String> onlySegments = new ArrayList<>();
     onlySegments.add("_0");
